[package]
name = "rust-candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.149", features = ["derive"] }
tui = "0.19.0"
crossterm = "0.25.0"
unicode-width = "0.1.5"
ansi-parser = "0.8.0"
ctrlc = "3.2.3"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
[dependencies.cli-candlestick-chart]
git="https://github.com/flisky/cli-candlestick-chart.git"
branch="main"